# Presale-Factory-Solana

./: Anchor.toml  Cargo.toml  README.md
factory/: Anchor.toml
factory/programs/amm-proxy/src/: lib.rs
factory/programs/presale-launcher/: Cargo.toml
factory/programs/presale-launcher/src/: constants.rs  error.rs  lib.rs
factory/programs/presale-launcher/src/instructions/: initialize.rs  initialize_launchpad.rs  initialize_pool.rs  mod.rs  purchase.rs  sell.rs  set_admin.rs  set_fee_pool.rs  start_presale.rs  withdraw.rs
factory/programs/presale-launcher/src/state/: launcher.rs  launchpad.rs  mod.rs
factory/tests/: amm-proxy.ts  presale.ts  util.ts
lib/: Cargo.toml
lib/src/: lib.rs
